# lrn

./: .gitignore  Cargo.toml  README.md  lrn_vault.db  test_one.md  test_two.md
.github/workflows/: ci.yml
notes/: test_one.md  test_two.md
nsis/: installer.nsi
src/: args.rs  database.rs  main.rs
src/app/: handlers.rs  mod.rs
src/ui/: components.rs  mod.rs  utils.rs
