[package]
name = "lrn"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tui-textarea = { version = "0.7", features = ["crossterm", "search"] }
regex = "1.10"
